@@ -17,13 +17,15 @@ pkgincludeinput_HEADERS= \
 	xmpp_struct.h    \
 	xmpp.h           \
 	xmpp_jid.h       \
-	xmpp_message.h
+	xmpp_message.h   \
+	xmpp_auth.h
 
 libxmpp_la_SOURCES = \
 	xmpp_opcode.c    \
 	xmpp_callback.c  \
 	xmpp.c           \
 	xmpp_jid.c       \
-	xmpp_message.c
+	xmpp_message.c   \
+	xmpp_auth.c
 
 libxmpp_la_CFLAGS = $(ecore_cflags) $(IDN_CFLAGS) $(EXPAT_INCLUDE) -I$(top_srcdir)/src
