@@ -21,22 +21,22 @@ int main (int argc, char ** argv) {
     return 1;
   }
 
+  /* initialize ecore connection */
+  ecore_con_init();
+
   /* create Egxp  */
   Egxp * eg = egxp_new ();
   
   /* initialize protocol */
   Xmpp * xm = xmpp_register (eg);
   
-  
-  /* initialize ecore connection */
-  ecore_con_init();
   /* after 3 second we quit the ecore loop */
-  ecore_timer_add (8, timer_cb, NULL);
-  printf("Quit automaticly (after 8 seconds)\n");
+  ecore_timer_add (5, timer_cb, NULL);
+  printf("Quit automaticly (after 5 seconds)\n");
   
   /* define the connection */
   eg->connection = egxp_connection_new (argv[2], atoi (argv[3]), 0);
-  if (egxp_connection_connect (eg->connection) == 0) {
+  if (egxp_connection_connect (eg->connection) == 0) { 
     printf("Impossible to connect to %s %s\n", argv[2], argv[3]);
   } else {
     printf("We are connected to %s:%s\n", argv[2], argv[3]);
@@ -46,8 +46,8 @@ int main (int argc, char ** argv) {
   xm->jid = xmpp_jid_new (argv[1], argv[2], "eim");
   
   /* now we can send a message to the server */
+  xmpp_message_stream (xm);
   
-
   /* ecore loop */
   ecore_main_loop_begin();
   /* shutdown */
